# coprocessor-evm-call

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
bins/cartesi-coprocessor-evm-runner/: Cargo.toml
bins/cartesi-coprocessor-evm-runner/src/: main.rs
bins/runner/: Cargo.toml
crates/cartesi-coprocessor-evm/: Cargo.toml
crates/cartesi-coprocessor-evm/src/: evm.rs  gio_client.rs  gio_database.rs  gio_error.rs  lib.rs
crates/evm-call/: Cargo.toml
crates/evm-call/src/: gio_client.rs  gio_database.rs  gio_error.rs  lib.rs
src/: evmRunner.ts  gioBlockchainAPI.ts  types.ts
